--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "f1-lineup",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/S50B32/f1-lineup/",
+  "homepage": "https://github.com/S50B32/f1-lineup",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "gh-pages": "^2.2.0",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -35,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
